/**
 * Enumeración para niveles de alerta en el sistema IoT
 * Define los diferentes niveles de criticidad de las alertas
 */
public enum NivelAlerta {
    CRITICO,    // Nivel más alto de criticidad
    ADVERTENCIA, // Nivel medio de criticidad  
    INFORMATIVO // Nivel bajo de criticidad
}
